align-content fix

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,7 @@ main {
 	flex-flow: column;
 	justify-content: center;
 	align-items: center;
-	align-content: flex-end;
+	align-content: center;
 	width: 100vw;
 	margin-top: 20px;
 	position: relative;
